CDC Debezium Supplier, Source Boot Starter
 - Add supplier, source and boot auto-config.
 - Add work around for KafkaNull handling.
 - Update CDC to 1.2.1.Final. Replace the deprecated properties.

remove comments

Add missing metadata configuration. Improve README docs.

CDC: add all metadata for doc auto-generation

Remove custom KafkaNullConverter.

  - The fixed KafkaNullConverter implementation comes with kafka binder 3.0.8-BUILD-SNAPSHOT or newer.

Add repositories to maven config in app generation project.

Remove the unnecessary function version in maven plugin configuration for app generation.

--- a/applications/stream-applications-build/pom.xml
+++ b/applications/stream-applications-build/pom.xml
@@ -20,6 +20,7 @@
 
     <properties>
         <apps.version>3.0.0-SNAPSHOT</apps.version>
+        <cdc-debezium-source.version>${apps.version}</cdc-debezium-source.version>
         <file-source.version>${apps.version}</file-source.version>
         <ftp-source.version>${apps.version}</ftp-source.version>
         <geode-source.version>${apps.version}</geode-source.version>
