--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
@@ -1,3 +1,4 @@
+source.cdc-debezium=docker:springcloudstream/cdc-debezium-source-kafka:@cdc-debezium-source-docker.tag@
 source.file=docker:springcloudstream/file-source-kafka:@file-source-docker.tag@
 source.ftp=docker:springcloudstream/ftp-source-kafka:@ftp-source-docker.tag@
 source.geode=docker:springcloudstream/geode-source-kafka:@geode-source-docker.tag@
