--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven-repo-url.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven-repo-url.properties
@@ -1,3 +1,5 @@
+source.cdc-debezium=https://@repo-spring-io@/org/springframework/cloud/stream/app/cdc-debezium-source-kafka/@cdc-debezium-source.version@/cdc-debezium-source-kafka-@cdc-debezium-source.version@.jar
+source.cdc-debezium.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/cdc-debezium-source-kafka/@cdc-debezium-source.version@/cdc-debezium-source-kafka-@cdc-debezium-source.version@-metadata.jar
 source.file=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-source-kafka/@file-source.version@/file-source-kafka-@file-source.version@.jar
 source.file.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-source-kafka/@file-source.version@/file-source-kafka-@file-source.version@-metadata.jar
 source.ftp=https://@repo-spring-io@/org/springframework/cloud/stream/app/ftp-source-kafka/@ftp-source.version@/ftp-source-kafka-@ftp-source.version@.jar
