--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
@@ -1,3 +1,5 @@
+source.cdc-debezium=maven://org.springframework.cloud.stream.app:cdc-debezium-source-rabbit:@cdc-debezium-source.version@
+source.cdc-debezium.metadata=maven://org.springframework.cloud.stream.app:cdc-debezium-source-rabbit:jar:metadata:@cdc-debezium-source.version@
 source.file=maven://org.springframework.cloud.stream.app:file-source-rabbit:@file-source.version@
 source.file.metadata=maven://org.springframework.cloud.stream.app:file-source-rabbit:jar:metadata:@file-source.version@
 source.ftp=maven://org.springframework.cloud.stream.app:ftp-source-rabbit:@ftp-source.version@
