--- a/functions/common/tensorflow-common/pom.xml
+++ b/functions/common/tensorflow-common/pom.xml
@@ -19,15 +19,23 @@
 
 	<properties>
 		<checkstyle.skip>true</checkstyle.skip>
-		<spring-framework.version>5.1.6.RELEASE</spring-framework.version>
+		<tensorflow.version>1.15.0</tensorflow.version>
+		<spring-core.version>5.2.7.RELEASE</spring-core.version>
 		<jackson.version>2.11.0</jackson.version>
 		<apache.commons.compress>1.20</apache.commons.compress>
 		<commons-io.version>2.7</commons-io.version>
-		<tensorflow.version>1.15.0</tensorflow.version>
+		<commons-lang3.version>3.10</commons-lang3.version>
+		<pcollections.version>3.0.3</pcollections.version>
+		<slf4j-api.version>1.7.26</slf4j-api.version>
 	</properties>
 
-
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring-core.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.tensorflow</groupId>
 			<artifactId>tensorflow</artifactId>
@@ -50,6 +58,11 @@
 			<artifactId>commons-io</artifactId>
 			<version>${commons-io.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>${commons-lang3.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
@@ -69,45 +82,12 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.26</version>
+			<version>${slf4j-api.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.pcollections</groupId>
 			<artifactId>pcollections</artifactId>
-			<version>3.0.3</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-validation</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-messaging</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-webflux</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>org.junit.vintage</groupId>
-					<artifactId>junit-vintage-engine</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>io.projectreactor</groupId>
-			<artifactId>reactor-test</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-configuration-processor</artifactId>
-			<scope>provided</scope>
+			<version>${pcollections.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -120,6 +100,4 @@
 			</snapshots>
 		</repository>
 	</repositories>
-
-
 </project>
