--- a/applications/processor/script-processor/pom.xml
+++ b/applications/processor/script-processor/pom.xml
@@ -73,7 +73,7 @@
         <dependency>
             <groupId>org.springframework.cloud.fn</groupId>
             <artifactId>payload-converter-function</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0-M2</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
