--- a/functions/function/object-detection-function/pom.xml
+++ b/functions/function/object-detection-function/pom.xml
@@ -3,14 +3,14 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>object-detection-function</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0-M2</version>
 	<name>object-detection-function</name>
 	<description>Spring Native Function for Tensorflow Integration</description>
 
 	<parent>
 		<groupId>org.springframework.cloud.fn</groupId>
 		<artifactId>spring-functions-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0-M2</version>
 		<relativePath>../../spring-functions-parent</relativePath>
 	</parent>
 
