--- a/applications/stream-applications-core/pom.xml
+++ b/applications/stream-applications-core/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.springframework.cloud.stream.app</groupId>
     <artifactId>stream-applications-core</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0-M2</version>
     <name>stream-applications-core</name>
     <description>Stream Applications Core Parent</description>
     <packaging>pom</packaging>
@@ -19,7 +19,7 @@
         <java.version>1.8</java.version>
         <spring-boot.version>2.3.1.RELEASE</spring-boot.version>
         <stream-apps-core.version>${project.version}</stream-apps-core.version>
-        <java-functions.version>1.0.0-SNAPSHOT</java-functions.version>
+        <java-functions.version>1.0.0-M2</java-functions.version>
         <scst-app-maven-plugin.version>2.0.0.M2</scst-app-maven-plugin.version>
         <app-metadata-maven-plugin-version>2.0.1.M1</app-metadata-maven-plugin-version>
         <stream-apps-docs-plugin.version>3.0.0.M1</stream-apps-docs-plugin.version>
