--- a/applications/processor/groovy-processor/pom.xml
+++ b/applications/processor/groovy-processor/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>groovy-processor</artifactId>
     <name>groovy-processor</name>
     <description>groovy processor apps</description>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0-M2</version>
 
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
