--- a/applications/processor/header-enricher-processor/pom.xml
+++ b/applications/processor/header-enricher-processor/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>header-enricher-processor</artifactId>
     <name>header-enricher-processor</name>
     <description>header-enricher processor apps</description>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0-M2</version>
 
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
