--- a/applications/sink/router-sink/pom.xml
+++ b/applications/sink/router-sink/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>router-sink</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0-M2</version>
     <name>router-sink</name>
     <description>log sink apps</description>
     <packaging>jar</packaging>
