--- a/functions/function/tasklauncher-function/pom.xml
+++ b/functions/function/tasklauncher-function/pom.xml
@@ -40,6 +40,10 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-function-context</artifactId>
+        </dependency>
+          <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
