--- a/applications/processor/filter-processor/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
+++ b/applications/processor/filter-processor/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
@@ -1,2 +1,2 @@
-configuration-properties.classes=org.springframework.cloud.fn.spel.SpelFunctionProperties
+configuration-properties.classes=org.springframework.cloud.fn.filter.FilterFunctionProperties
 
