--- a/applications/processor/object-detection-processor/pom.xml
+++ b/applications/processor/object-detection-processor/pom.xml
@@ -61,6 +61,11 @@
                     <dependencies>
                         <dependency>
                             <groupId>org.springframework.cloud.stream.app</groupId>
+                            <artifactId>stream-applications-postprocessor-common</artifactId>
+                            <version>${project.version}</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>org.springframework.cloud.stream.app</groupId>
                             <artifactId>object-detection-processor</artifactId>
                             <version>${project.version}</version>
                         </dependency>
