--- a/applications/processor/image-recognition-processor/pom.xml
+++ b/applications/processor/image-recognition-processor/pom.xml
@@ -60,6 +60,11 @@
                     <dependencies>
                         <dependency>
                             <groupId>org.springframework.cloud.stream.app</groupId>
+                            <artifactId>stream-applications-postprocessor-common</artifactId>
+                            <version>${project.version}</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>org.springframework.cloud.stream.app</groupId>
                             <artifactId>image-recognition-processor</artifactId>
                             <version>${project.version}</version>
                         </dependency>
