--- a/applications/sink/cassandra-sink/pom.xml
+++ b/applications/sink/cassandra-sink/pom.xml
@@ -48,6 +48,11 @@
 
                     <dependencies>
                         <dependency>
+                            <groupId>org.springframework.cloud.stream.app</groupId>
+                            <artifactId>stream-applications-postprocessor-common</artifactId>
+                            <version>${project.version}</version>
+                        </dependency>
+                        <dependency>
                             <groupId>org.springframework.cloud.fn</groupId>
                             <artifactId>cassandra-consumer</artifactId>
                         </dependency>
