--- a/applications/sink/ftp-sink/pom.xml
+++ b/applications/sink/ftp-sink/pom.xml
@@ -45,6 +45,11 @@
                     </generatedApp>
                     <dependencies>
                         <dependency>
+                            <groupId>org.springframework.cloud.stream.app</groupId>
+                            <artifactId>stream-applications-postprocessor-common</artifactId>
+                            <version>${project.version}</version>
+                        </dependency>
+                        <dependency>
                             <groupId>org.springframework.cloud.fn</groupId>
                             <artifactId>ftp-consumer</artifactId>
                         </dependency>
