--- a/applications/sink/rabbit-sink/pom.xml
+++ b/applications/sink/rabbit-sink/pom.xml
@@ -79,6 +79,11 @@
 
                     <dependencies>
                         <dependency>
+                            <groupId>org.springframework.cloud.stream.app</groupId>
+                            <artifactId>stream-applications-postprocessor-common</artifactId>
+                            <version>${project.version}</version>
+                        </dependency>
+                        <dependency>
                             <groupId>org.springframework.cloud.fn</groupId>
                             <artifactId>rabbit-consumer</artifactId>
                         </dependency>
