--- a/applications/sink/throughput-sink/pom.xml
+++ b/applications/sink/throughput-sink/pom.xml
@@ -59,6 +59,11 @@
                     <dependencies>
                         <dependency>
                             <groupId>org.springframework.cloud.stream.app</groupId>
+                            <artifactId>stream-applications-postprocessor-common</artifactId>
+                            <version>${project.version}</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>org.springframework.cloud.stream.app</groupId>
                             <artifactId>throughput-sink</artifactId>
                             <version>${project.version}</version>
                         </dependency>
