Fix typo in import files - jms source

--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven.properties
@@ -9,7 +9,7 @@ source.http.metadata=maven://org.springframework.cloud.stream.app:http-source-ka
 source.jdbc=maven://org.springframework.cloud.stream.app:jdbc-source-kafka:@jdbc-source.version@
 source.jdbc.metadata=maven://org.springframework.cloud.stream.app:jdbc-source-kafka:jar:metadata:@jdbc-source.version@
 source.jms=maven://org.springframework.cloud.stream.app:jms-source-kafka:@jms-source.version@
-sourc.jms.metadata=maven://org.springframework.cloud.stream.app:jms-source-kafka:jar:metadata:@jms-source.version@
+source.jms.metadata=maven://org.springframework.cloud.stream.app:jms-source-kafka:jar:metadata:@jms-source.version@
 source.load-generator=maven://org.springframework.cloud.stream.app:load-generator-source-kafka:@load-generator-source.version@
 source.load-generator.metadata=maven://org.springframework.cloud.stream.app:load-generator-source-kafka:jar:metadata:@load-generator-source.version@
 source.mongodb=maven://org.springframework.cloud.stream.app:mongodb-source-kafka:@mongodb-source.version@
