--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
@@ -9,7 +9,7 @@ source.http.metadata=maven://org.springframework.cloud.stream.app:http-source-ra
 source.jdbc=maven://org.springframework.cloud.stream.app:jdbc-source-rabbit:@jdbc-source.version@
 source.jdbc.metadata=maven://org.springframework.cloud.stream.app:jdbc-source-rabbit:jar:metadata:@jdbc-source.version@
 source.jms=maven://org.springframework.cloud.stream.app:jms-source-rabbit:@jms-source.version@
-sourc.jms.metadata=maven://org.springframework.cloud.stream.app:jms-source-rabbit:jar:metadata:@jms-source.version@
+source.jms.metadata=maven://org.springframework.cloud.stream.app:jms-source-rabbit:jar:metadata:@jms-source.version@
 source.load-generator=maven://org.springframework.cloud.stream.app:load-generator-source-rabbit:@load-generator-source.version@
 source.load-generator.metadata=maven://org.springframework.cloud.stream.app:load-generator-source-rabbit:jar:metadata:@load-generator-source.version@
 source.mongodb=maven://org.springframework.cloud.stream.app:mongodb-source-rabbit:@mongodb-source.version@
