--- a/applications/stream-applications-core/pom.xml
+++ b/applications/stream-applications-core/pom.xml
@@ -279,6 +279,11 @@
                                 <version>${stream-apps-core.version}</version>
                             </dependency>
                             <dependency>
+                                <groupId>org.springframework.cloud.stream.app</groupId>
+                                <artifactId>stream-applications-postprocessor-common</artifactId>
+                                <version>${stream-apps-core.version}</version>
+                            </dependency>
+                            <dependency>
                                 <groupId>io.micrometer</groupId>
                                 <artifactId>micrometer-registry-influx</artifactId>
                             </dependency>
