--- a/applications/source/cdc-debezium-source/pom.xml
+++ b/applications/source/cdc-debezium-source/pom.xml
@@ -42,7 +42,6 @@
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
-            <version>2.5.2.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -58,7 +57,8 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-stream-binder-kafka</artifactId>
-			<version>3.0.6.RELEASE</version>
+            <!-- 3.0.8.BUILD-SNAPSHOT or newer is required because of an issue with the KafkaNullConverter -->
+			<version>3.0.8.BUILD-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 
