Add true Consumer and tests

--- a/applications/sink/mongodb-sink/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
+++ b/applications/sink/mongodb-sink/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
@@ -1,1 +1,2 @@
-configuration-properties.classes=org.springframework.cloud.fn.consumer.mongo.MongoDbConsumerProperties
+configuration-properties.classes=org.springframework.cloud.fn.consumer.mongo.MongoDbConsumerProperties,\
+  org.springframework.boot.autoconfigure.mongo.MongoProperties
