--- a/applications/processor/http-request-processor/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/processor/http-request-processor/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -1,1 +1,2 @@
-configuration-properties.classes=org.springframework.cloud.stream.app.processor.http.request.HttpRequestProcessorProperties
+configuration-properties.classes=org.springframework.cloud.fn.http.request.HttpRequestFunctionProperties
+
