--- a/applications/stream-applications-core/pom.xml
+++ b/applications/stream-applications-core/pom.xml
@@ -156,7 +156,7 @@
                 <repository>
                     <id>spring-snapshots</id>
                     <name>Spring Snapshots</name>
-                    <url>https://repo.spring.io/libs-snapshot-local</url>
+                    <url>https://repo.spring.io/snapshot</url>
                     <snapshots>
                         <enabled>true</enabled>
                     </snapshots>
@@ -167,7 +167,7 @@
                 <repository>
                     <id>spring-milestones</id>
                     <name>Spring Milestones</name>
-                    <url>https://repo.spring.io/libs-milestone-local</url>
+                    <url>https://repo.spring.io/milestone</url>
                     <snapshots>
                         <enabled>false</enabled>
                     </snapshots>
@@ -180,12 +180,17 @@
                         <enabled>false</enabled>
                     </snapshots>
                 </repository>
+                <repository>
+                    <id>spring-plugins</id>
+                    <name>Spring Maven Plugins Repository</name>
+                    <url>https://repo.spring.io/plugins-release</url>
+                </repository>
             </repositories>
             <pluginRepositories>
                 <pluginRepository>
                     <id>spring-snapshots</id>
                     <name>Spring Snapshots</name>
-                    <url>https://repo.spring.io/libs-snapshot-local</url>
+                    <url>https://repo.spring.io/snapshot</url>
                     <snapshots>
                         <enabled>true</enabled>
                     </snapshots>
@@ -196,7 +201,7 @@
                 <pluginRepository>
                     <id>spring-milestones</id>
                     <name>Spring Milestones</name>
-                    <url>https://repo.spring.io/libs-milestone-local</url>
+                    <url>https://repo.spring.io/milestone</url>
                     <snapshots>
                         <enabled>false</enabled>
                     </snapshots>
@@ -204,7 +209,7 @@
                 <pluginRepository>
                     <id>spring-releases</id>
                     <name>Spring Releases</name>
-                    <url>https://repo.spring.io/libs-release-local</url>
+                    <url>https://repo.spring.io/release</url>
                     <snapshots>
                         <enabled>false</enabled>
                     </snapshots>
