--- a/applications/source/file-source/pom.xml
+++ b/applications/source/file-source/pom.xml
@@ -58,6 +58,12 @@
                             <groupId>org.springframework.cloud.stream.app</groupId>
                             <artifactId>stream-applications-composite-function-support</artifactId>
                             <version>${stream-apps-core.version}</version>
+                            <exclusions>
+                                <exclusion>
+									<groupId>org.springframework.cloud.fn</groupId>
+                                    <artifactId>splitter-function</artifactId>
+                                </exclusion>
+                            </exclusions>
                         </dependency>
                     </dependencies>
                 </configuration>
