Syslog supplier/source
 - Provide TCP/UDP based syslog supplier and then generate apps based on that

--- a/applications/source/pom.xml
+++ b/applications/source/pom.xml
@@ -29,5 +29,6 @@
         <module>twitter-message-source</module>
         <module>websocket-source</module>
         <module>cdc-debezium-source</module>
+        <module>syslog-source</module>
     </modules>
 </project>
