--- a/functions/pom.xml
+++ b/functions/pom.xml
@@ -101,6 +101,7 @@
 		<module>supplier/s3-supplier</module>
 		<module>supplier/twitter-supplier</module>
 		<module>supplier/cdc-debezium-supplier</module>
+		<module>supplier/syslog-supplier</module>
 
 		<module>spring-functions-parent</module>
 		<module>function-dependencies</module>
