Allow per Binder configurations.
 - The new <binder> construct allows setting application properties, maven (properties, dependencies, managed dependencies, plugins) per Binder definition.

 Resolves https://github.com/spring-cloud/spring-cloud-app-starters-maven-plugins/pull/64

--- a/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/app.properties
+++ b/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/app.properties
@@ -19,8 +19,11 @@ spring.cloud.stream.function.bindings.{{app.functionDefinition}}-in-0=input
 spring.cloud.stream.function.bindings.{{app.functionDefinition}}-out-0=output
 {{/app.function}}
 
-{{#app.additionalProperties}}
+{{#app.properties}}
 {{this}}
-{{/app.additionalProperties}}
+{{/app.properties}}
 
+{{#app-binder.properties}}
+{{this}}
+{{/app-binder.properties}}
 
